crt: Provide __p__wenviron() function also for x64 msvcrt.dll
Function __p__wenviron() returns pointer to the first member of global
array _wenviron[] and is available since VC20, it is available also in
UCRT, and also in x86 version of OS system version msvcrt.dll.

For x64 version of msvcrt.dll provide mingw-w64 version of __p__wenviron()
function defined via global variable _wenviron[].

crtdll.dll and msvcrt10.dll do not provide _wenviron[] array and neither
__p__wenviron() function. Same applies for arm32 and arm64 versions of
msvcrt.dll.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -466,6 +466,7 @@ src_msvcrt64=\
   misc/__p__mbcasemap.c \
   misc/__p__mbctype.c \
   misc/__p__wcmdln.c \
+  misc/__p__wenviron.c \
   misc/_create_locale.c \
   misc/_free_locale.c \
   misc/_get_current_locale.c \
