--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -468,6 +468,7 @@ src_msvcrt64=\
   misc/__p__pgmptr.c \
   misc/__p__wcmdln.c \
   misc/__p__wenviron.c \
+  misc/__p__wpgmptr.c \
   misc/_create_locale.c \
   misc/_free_locale.c \
   misc/_get_current_locale.c \
@@ -486,6 +487,7 @@ src_msvcrtarm32=\
   misc/__p__mbctype.c \
   misc/__p__pgmptr.c \
   misc/__p__wcmdln.c \
+  misc/__p__wpgmptr.c \
   misc/_getpid.c \
   misc/initenv.c \
   stdio/_fstat64i32.c \
@@ -589,6 +591,7 @@ src_msvcrtarm64=\
   misc/__p__mbctype.c \
   misc/__p__pgmptr.c \
   misc/__p__wcmdln.c \
+  misc/__p__wpgmptr.c \
   misc/_getpid.c \
   misc/initenv.c \
   stdio/_setmaxstdio.c \
