crt: Provide _get_output_format() and _set_output_format() functions for all CRT import libraries
These functions are natively available since msvcr80.dll and also since
Vista version of msvcrt.dll. They are available also in ARM versions.
For all older CRT versions include mingw-w64 emulation.

Emulation in misc/output_format.c is slightly updated to optimize code for
non-msvcrt.dll version which do not provide these functions.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -1344,7 +1344,7 @@ _get_fileinfo
 _get_fmode
 F_X86_ANY(_get_osplatform)
 F_X86_ANY(_get_osver)
-; _get_output_format replaced by emu
+F_ARM_ANY(_get_output_format) ; i386 and x64 _get_output_format replaced by emu
 F_X86_ANY(_get_pgmptr)
 _get_wenviron
 F_X86_ANY(_get_winmajor)
@@ -1531,7 +1531,7 @@ _set_doserrno
 F_ARM_ANY(_set_errno) ; i386 and x64 _set_errno replaced by emu
 _set_fileinfo
 _set_fmode
-; _set_output_format replaced by emu
+F_ARM_ANY(_set_output_format) ; i386 and x64 _set_output_format replaced by emu
 _snprintf_c
 _snprintf_c_l
 _snprintf_l
