crt: Provide _get_errno() and _set_errno() functions for all CRT import libraries
Functions _get_errno() and _set_errno() are natively available since
msvcr80.dll and also since Windows Vista version of msvcrt.dll.

Import libraries for crtdll, msvcrt10-40 and msvcrt.dll already contains
emulation of these functions. Include this emulation also for msvcr70 and
msvcr71, so these functions would be available in all CRT import libraries.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -739,6 +739,7 @@ src_msvcr70=\
   misc/imaxdiv.c \
   misc/invalid_parameter_handler.c \
   misc/output_format.c \
+  misc/seterrno.c \
   misc/wassert.c \
   stdio/_fstat64i32.c \
   stdio/mingw_lock.c
@@ -751,6 +752,7 @@ src_msvcr71=\
   misc/imaxdiv.c \
   misc/invalid_parameter_handler.c \
   misc/output_format.c \
+  misc/seterrno.c \
   misc/wassert.c \
   stdio/_fstat64i32.c \
   stdio/mingw_lock.c
