crt: Fix fgetpos() and fsetpos() functions for crtdll.dll, msvcrt10.dll and msvcrt20.dll
Functions fgetpos() and fsetpos() in these libraries have different ABI
than in all later versions starting with msvcrt40.

Their second argument is pointer to 32-bit signed value, which is not
compatible with the fpos_t type (64-bit), used by all later versions.

So rename these functions in these import libraries to names with suffix 32
and provides mingw-w64 fpos_t (64-bit) wrappers around them for ABI
compatibility.

This change fixes ABI compatibility for those older DLL libraries.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib32/crtdll.def.in
+++ b/mingw-w64-crt/lib32/crtdll.def.in
@@ -455,7 +455,7 @@ feof
 ferror
 fflush
 fgetc
-fgetpos
+fgetpos32 == fgetpos ; rename fgetpos as it is not 64-bit
 fgets
 fgetwc
 floor
@@ -471,7 +471,7 @@ freopen
 frexp
 fscanf
 fseek
-fsetpos
+fsetpos32 == fsetpos ; rename fsetpos as it is not 64-bit
 ftell
 fwprintf
 fwrite
