--- a/mingw-w64-crt/lib32/msvcrt20.def.in
+++ b/mingw-w64-crt/lib32/msvcrt20.def.in
@@ -1351,7 +1351,7 @@ feof
 ferror
 fflush
 fgetc
-fgetpos
+fgetpos32 == fgetpos ; rename fgetpos as it is not 64-bit
 fgets
 fgetwc
 fgetws
@@ -1369,7 +1369,7 @@ freopen
 frexp
 fscanf
 fseek
-fsetpos
+fsetpos32 == fsetpos ; rename fsetpos as it is not 64-bit
 ftell
 fwprintf
 fwrite
