crt: Define fgetpos64() and fsetpos64() functions in crt-aliases.def.in as symbol aliases
Functions fgetpos64() and fsetpos64() are just aliases for functions
fgetpos() and fsetpos() as they are already using 64-bit fpos_t type.

Most aliased functions are defined in crt-aliases.def.in file. Do same also
for fgetpos64() and fsetpos64() functions by moving them from individual C
files stdio/fgetpos64.c and stdio/fsetpos64.c.

Libraries which do not have real fgetpos() and fsetpos() have aliases
defined in the same file were are defined compatibility wrappers.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -242,6 +242,13 @@ ADD_UNDERSCORE(pclose)
 ADD_UNDERSCORE(popen)
 ; ADD_UNDERSCORE(scalb)
 
+; This is list of symbol aliases for Large File Specification (extension to Single UNIX Specification)
+#ifndef NO_FPOS64_ALIASES
+; fgetpos and fsetpos are already 64-bit
+fgetpos64 == fgetpos
+fsetpos64 == fsetpos
+#endif
+
 ; This is list of symbol aliases for GNU functions which are not part of POSIX or ISO C
 strcasecmp == _stricmp
 strncasecmp == _strnicmp
