--- a/mingw-w64-crt/lib32/msvcrt10.def.in
+++ b/mingw-w64-crt/lib32/msvcrt10.def.in
@@ -1298,6 +1298,7 @@ wscanf
 #define FIXED_SIZE_SYMBOLS
 #define NO_WIDE_FIXED_SIZE
 #define NO_I64_FIXED_SIZE
+#define NO_FPOS64_ALIASES
 #define NO_STRCMPI_ALIAS
 #define WITH_NEXTAFTER_ALIAS
 #include "crt-aliases.def.in"
