crt: Provide _filelengthi64() function for crtdll.dll, msvcrt10.dll and msvcrt20.dll
Function _filelengthi64() is available since msvcrt40.dll.

For previous CRT versions, which have only 32-bit file offsets, define it
as wrapper around 32-bit _filelength() function.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -635,6 +635,7 @@ src_crtdll=\
   misc/strtoimax.c \
   misc/strtoumax.c \
   misc/wassert.c \
+  stdio/_filelengthi64.c \
   stdio/_scprintf.c \
   stdio/_vscprintf.c \
   stdio/atoll.c \
@@ -676,6 +677,7 @@ src_msvcrt10=\
   misc/strtoimax.c \
   misc/strtoumax.c \
   misc/wassert.c \
+  stdio/_filelengthi64.c \
   stdio/_scprintf.c \
   stdio/_vscprintf.c \
   stdio/atoll.c \
@@ -706,6 +708,7 @@ src_msvcrt20=\
   misc/strtoimax.c \
   misc/strtoumax.c \
   misc/wassert.c \
+  stdio/_filelengthi64.c \
   stdio/_scprintf.c \
   stdio/_vscprintf.c \
   stdio/atoll.c \
