crt: Fix some function symbols in msvcr90.def.in and msvcr100.def.in files
Following symbols represents functions. So remove DATA keyword from them.

__report_gsfailure
_byteswap_uint64
_byteswap_ulong
_byteswap_ushort
_get_errno
_rotl64
_rotr64
_set_errno
btowc
mbrlen
mbrtowc
mbsrtowcs
strnlen
wcrtomb
wcsnlen
wcsrtombs
wctob

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib32/msvcr90.def.in
+++ b/mingw-w64-crt/lib32/msvcr90.def.in
@@ -301,7 +301,7 @@ __pctype_func
 __pioinfo DATA
 __pwctype_func
 __pxcptinfoptrs
-__report_gsfailure DATA
+__report_gsfailure
 __set_app_type
 __set_flsgetvalue
 __setlc_active DATA
@@ -370,9 +370,9 @@ _atoldbl_l
 _beep
 _beginthread
 _beginthreadex
-_byteswap_uint64 DATA
-_byteswap_ulong DATA
-_byteswap_ushort DATA
+_byteswap_uint64
+_byteswap_ulong
+_byteswap_ushort
 _c_exit
 _cabs DATA
 _callnewh
@@ -536,7 +536,7 @@ _get_current_locale
 _get_daylight
 _get_doserrno
 _get_dstbias
-_get_errno DATA
+_get_errno
 _get_fmode
 _get_heap_handle
 _get_invalid_parameter_handler
@@ -906,9 +906,9 @@ _resetstkoflw
 _rmdir
 _rmtmp
 _rotl
-_rotl64 DATA
+_rotl64
 _rotr
-_rotr64 DATA
+_rotr64
 _safe_fdiv
 _safe_fdivr
 _safe_fprem
@@ -933,7 +933,7 @@ _set_abort_behavior
 _set_amblksiz
 _set_controlfp
 _set_doserrno
-_set_errno DATA
+_set_errno
 _set_error_mode
 _set_fmode
 _set_invalid_parameter_handler
@@ -1296,7 +1296,7 @@ atoi
 atol
 bsearch
 bsearch_s
-btowc DATA
+btowc
 calloc
 ceil DATA
 clearerr
@@ -1388,9 +1388,9 @@ log10
 longjmp
 malloc
 mblen
-mbrlen DATA
-mbrtowc DATA
-mbsrtowcs DATA
+mbrlen
+mbrtowc
+mbsrtowcs
 mbsrtowcs_s
 mbstowcs
 mbstowcs_s
@@ -1453,7 +1453,7 @@ strncat_s
 strncmp
 strncpy
 strncpy_s
-strnlen DATA
+strnlen
 strpbrk
 strrchr
 strspn
@@ -1492,7 +1492,7 @@ vsprintf_s
 vswprintf_s
 vwprintf
 vwprintf_s
-wcrtomb DATA
+wcrtomb
 wcrtomb_s
 wcscat
 wcscat_s
@@ -1509,10 +1509,10 @@ wcsncat_s
 wcsncmp
 wcsncpy
 wcsncpy_s
-wcsnlen DATA
+wcsnlen
 wcspbrk
 wcsrchr
-wcsrtombs DATA
+wcsrtombs
 wcsrtombs_s
 wcsspn
 wcsstr
@@ -1524,7 +1524,7 @@ wcstombs
 wcstombs_s
 wcstoul
 wcsxfrm
-wctob DATA
+wctob
 wctomb
 wctomb_s
 wprintf
