--- a/mingw-w64-crt/lib64/msvcr100.def.in
+++ b/mingw-w64-crt/lib64/msvcr100.def.in
@@ -649,7 +649,7 @@ __pctype_func
 __pioinfo DATA
 __pwctype_func
 __pxcptinfoptrs
-__report_gsfailure DATA
+__report_gsfailure
 __set_app_type
 __set_flsgetvalue
 __setlc_active DATA
@@ -702,9 +702,9 @@ _atoldbl_l
 _beep
 _beginthread
 _beginthreadex
-_byteswap_uint64 DATA
-_byteswap_ulong DATA
-_byteswap_ushort DATA
+_byteswap_uint64
+_byteswap_ulong
+_byteswap_ushort
 _c_exit
 _cabs DATA
 _callnewh
@@ -863,7 +863,7 @@ _get_current_locale
 _get_daylight
 _get_doserrno
 _get_dstbias
-_get_errno DATA
+_get_errno
 _get_fmode
 _get_heap_handle
 _get_invalid_parameter_handler
@@ -1227,9 +1227,9 @@ _resetstkoflw
 _rmdir
 _rmtmp
 _rotl
-_rotl64 DATA
+_rotl64
 _rotr
-_rotr64 DATA
+_rotr64
 _scalb
 _scalbf
 _scanf_l
@@ -1247,7 +1247,7 @@ _searchenv_s
 _set_abort_behavior
 _set_controlfp
 _set_doserrno
-_set_errno DATA
+_set_errno
 _set_error_mode
 _set_fmode
 _set_invalid_parameter_handler
@@ -1612,7 +1612,7 @@ atoi
 atol
 bsearch
 bsearch_s
-btowc DATA
+btowc
 calloc
 ceil DATA
 ceilf DATA
@@ -1712,9 +1712,9 @@ logf DATA
 longjmp
 malloc
 mblen
-mbrlen DATA
-mbrtowc DATA
-mbsrtowcs DATA
+mbrlen
+mbrtowc
+mbsrtowcs
 mbsrtowcs_s
 mbstowcs
 mbstowcs_s
@@ -1782,7 +1782,7 @@ strncat_s
 strncmp
 strncpy
 strncpy_s
-strnlen DATA
+strnlen
 strpbrk
 strrchr
 strspn
@@ -1822,7 +1822,7 @@ vsprintf_s
 vswprintf_s
 vwprintf
 vwprintf_s
-wcrtomb DATA
+wcrtomb
 wcrtomb_s
 wcscat
 wcscat_s
@@ -1839,10 +1839,10 @@ wcsncat_s
 wcsncmp
 wcsncpy
 wcsncpy_s
-wcsnlen DATA
+wcsnlen
 wcspbrk
 wcsrchr
-wcsrtombs DATA
+wcsrtombs
 wcsrtombs_s
 wcsspn
 wcsstr
@@ -1854,7 +1854,7 @@ wcstombs
 wcstombs_s
 wcstoul
 wcsxfrm
-wctob DATA
+wctob
 wctomb
 wctomb_s
 wmemcpy_s
