--- a/mingw-w64-crt/lib32/msvcr90d.def.in
+++ b/mingw-w64-crt/lib32/msvcr90d.def.in
@@ -378,7 +378,7 @@ _adj_fdiv_m16i ; msvc symbol is without decoration but callee pop stack (like st
 _adj_fdiv_m32 ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
 _adj_fdiv_m32i ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
 _adj_fdiv_m64 ; msvc symbol is without decoration but callee pop stack (like stdcall @8)
-_adj_fdiv_r ; Check!!! Couldn't determine function argument count. Function doesn't return. 
+_adj_fdiv_r
 _adj_fdivr_m16i ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
 _adj_fdivr_m32 ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
 _adj_fdivr_m32i ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
