crt: msvcr120_app.def.in: Fix name of i386 NLG_Return2 symbol
x64 version has this symbol with two leading underlines.
i386 version has this symbol with just one leading underline.
Same applies for other msvcrt libraries.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcr120_app.def.in
+++ b/mingw-w64-crt/lib-common/msvcr120_app.def.in
@@ -815,7 +815,8 @@ F_X86_ANY(__GetPlatformExceptionInfo)
 F_I386(_NLG_Dispatch2@4)
 F_I386(_NLG_Return@12)
 F_X64(__NLG_Dispatch2)
-F_X86_ANY(__NLG_Return2)
+F_I386(_NLG_Return2)
+F_X64(__NLG_Return2)
 __RTCastToVoid
 __RTDynamicCast
 __RTtypeid
